--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,14 @@
-[*.{h,c}]
-indent_style = space
-indent_size = 2
+# .editorconfig
 
-[*.wh]
+root = true
+
+[*]
+charset = utf-8
 indent_style = space
 indent_size = 2
+trim_trailing_whitespace = true
+end_of_line = lf
+insert_final_newline = true
+
+[Makefile]
+indent_style = tab
