--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,7 +14,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: apt-get update && apt-get install build-essential libreadline-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install build-essential libreadline-dev
 
     - name: Build
       run: make
