--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,6 @@ trim_trailing_whitespace = true
 end_of_line = lf
 insert_final_newline = true
 
-[Makefile*]
+[{Makefile*,*.mk}]
+indent_size = 4
 indent_style = tab
